# avogadro-background-image

./: .gitignore  CMakeLists.txt  LICENSE  README.md  backgroundimageengine.cpp  backgroundimageengine.h
.github/workflows/: build.yml
generated_exports/: avogadrocoreexport.h  avogadroqtguiexport.h  avogadroqtpluginsexport.h  avogadrorenderingexport.h
